src/objects/SBQQ__QuoteProcess__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteProcessHelp</customHelpPage>
    <description>Quote process is the parent object for configuration data that drives a particular quote process.</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for instance to instance migrations as well and imports from external systems.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks this quote process as default.</description>
        <inlineHelpText>Select the checkbox to default the quote process selector to this process in Line Editor. This only applies when quote process selector is rendered as a picklist.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__GuidedOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that controls whether quotes covered by this process force guided product selection or allow for ad-hoc filtering.</description>
        <inlineHelpText>Select the checkbox if you want quotes covered by this process forced into guided product selection; otherwise, this defaults to ad-hoc filtering.</inlineHelpText>
        <label>Guided Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductAutoSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines if product is auto selected if it&apos;s the only one returned by a search.</description>
        <inlineHelpText>Select the checkbox to determine whether the product is auto selected if it&apos;s the only one returned by a search.</inlineHelpText>
        <label>Auto Select Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductConfigurationInitializer__c</fullName>
        <description>Custom Visualforce page that will be invoked on every configurable product to initialize the options.</description>
        <inlineHelpText>Custom Visualforce page that will be invoked on every configurable product to initialize the options.</inlineHelpText>
        <label>Product Configuration Initializer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSearchExecutor__c</fullName>
        <description>Name of VisualForce page that performs custom product search.</description>
        <inlineHelpText>VisualForce page that performs custom product search.</inlineHelpText>
        <label>Product Search Executor</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SortOrder__c</fullName>
        <description>Determines display order of quote processes in Line Editor (pick list rendering only).</description>
        <inlineHelpText>Specify the sequential number that determines the quote process&apos;s display order.</inlineHelpText>
        <label>Sort Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quote Process</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__SortOrder__c</columns>
        <columns>SBQQ__Default__c</columns>
        <columns>SBQQ__ProductAutoSelected__c</columns>
        <columns>SBQQ__GuidedOnly__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>